crates/daow/tests/compile_fail/execute_param_mismatch.stderr
warning: unused import: `Pool`
  --> tests/compile_fail/execute_param_mismatch.rs:17:53
   |
17 | use daow::{async_trait, dao, Entity, ExecuteResult, Pool, Result};
   |                                                     ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `i64: ToRow` is not satisfied
  --> tests/compile_fail/execute_param_mismatch.rs:24:1
   |
24 | #[dao]
   | ^^^^^^ the trait `ToRow` is not implemented for `i64`
   |
   = note: this error originates in the attribute macro `dao` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i64: EntityMeta` is not satisfied
  --> tests/compile_fail/execute_param_mismatch.rs:28:32
   |
28 |     async fn delete(&self, id: i64) -> Result<ExecuteResult>;
   |                                ^^^ the trait `EntityMeta` is not implemented for `i64`
